// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nested macros 1`] = `
import { select, plural } from "@lingui/core/macro";
select(gender, {
  male: plural(numOfGuests, {
    one: "He invites one guest",
    other: "He invites # guests",
  }),
  female: \`She is \${gender}\`,
  other: \`They is \${gender}\`,
});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as _i18n } from "@lingui/core";
_i18n._(
  /*i18n*/
  {
    id: "G8xqGf",
    message:
      "{gender, select, male {{numOfGuests, plural, one {He invites one guest} other {He invites # guests}}} female {She is {gender}} other {They is {gender}}}",
    values: {
      gender: gender,
      numOfGuests: numOfGuests,
    },
  },
);

`;

exports[`Nested macros with pure expressions option 1`] = `
import { select, plural } from "@lingui/core/macro";
select(gender, {
  male: plural(numOfGuests, {
    one: "He invites one guest",
    other: "He invites # guests",
  }),
  female: \`She is \${gender}\`,
  other: someOtherExp,
});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as _i18n } from "@lingui/core";
_i18n._(
  /*i18n*/
  {
    id: "j9PNNm",
    message:
      "{gender, select, male {{numOfGuests, plural, one {He invites one guest} other {He invites # guests}}} female {She is {gender}} other {{someOtherExp}}}",
    values: {
      gender: gender,
      numOfGuests: numOfGuests,
      someOtherExp: someOtherExp,
    },
  },
);

`;
